# tracefield

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RUNNING.md  install.sh  mise.toml  mix.exs
.tracefield/: policy.json
crates/tracefield-cli/: Cargo.toml
crates/tracefield-cli/src/: main.rs
crates/tracefield-core/: Cargo.toml
crates/tracefield-core/src/: codex_app_server.rs  consult.rs  entry.rs  flow.rs  lib.rs  llm.rs  scenario.rs  skill_tools.rs  store.rs  structural_view.rs  web_input.rs
docs/: README.md  conclusions.md  design-agent.md  design-archive.md  design-cluster.md  design-consulting-pipeline.md  design-field-runner.md  design-genesis.md  design-pipeline.md  design-reference.md  design-review.md  experiment-core.md  experiment-plan.md  experiment-results.md  findings-being-sedimentation.md  findings-bet2-overturn.md  findings-citation-precision.md  findings-command-probe.md  findings-continuity-vs-diffusion.md  findings-contrastive-serve.md  findings-diffusion-thinking.md  findings-governance-vs-fusion.md  findings-grounded-generation.md  findings-grounded-reading.md  findings-integration-supersede.md  findings-lens-type.md  findings-longrun-investigation.md  findings-mvp.md  findings-process-control-h7.md  findings-spec-probe-peerbonus.md  findings-substrate-hetero.md  findings-surface-dont-resolve.md  findings-survey-lens-breadth.md  findings-synthesizer-h5.md  findings-tooluse-h8.md  findings-ts-tdd-qwen.md  frame-problem.md  glossary.md  impl-brief-bet2-overturn.md  impl-brief-contrastive-serve.md  (+49 more)
experiments/: tf_b_analysis.py  tf_bc_adopt.py  tf_c_analysis.py  tf_experiment.py  tf_extval.py  tf_extval2.py  tf_irr.py  tf_isolation.py  tf_multihop.py  tf_persona_probe.py  tf_reference_adversarial.py  tf_reference_proto.py  tf_semisoluble_core.py
tasks/: lessons.md
test/: agent_test.exs  agent_tooluse_test.exs  bridge_task_test.exs  citation_precision_test.exs  consult_task_test.exs  coverage_test.exs  dev_task_test.exs  discovery_test.exs  (+30 more)
(+451 files in other folders)
